--- a/assets/less/whatsnew-128.less
+++ b/assets/less/whatsnew-128.less
@@ -13,6 +13,14 @@
 @xl: 80rem;     // 1280px
 @xxl: 90rem;    // 1440px
 
+:root {
+  --appeal-background: linear-gradient(169.85deg, #121621 2.48%, #16294D 32.48%);
+}
+
+body {
+  background: var(--appeal-background);
+}
+
 .page-whatsnew-128 {
   header {
     background: none;
