--- a/assets/less/appeal-128.less
+++ b/assets/less/appeal-128.less
@@ -19,7 +19,6 @@
   --appeal-bg-gradient: linear-gradient(169.85deg, #121621 2.48%, #16294D 32.48%);
   --appeal-overlay-bg-gradient: linear-gradient(0deg, rgba(23, 41, 78, 0.50) 0%, rgba(23, 41, 78, 0.50) 100%), radial-gradient(128% 50% at 0% 100%, #25A6A0 0%, rgba(163, 236, 227, 0.00) 100%), radial-gradient(162.43% 111.8% at 0% 0%, #AE55F7 0%, rgba(174, 85, 247, 0.00) 100%), radial-gradient(106.95% 103.6% at 100.87% 101.99%, #EA7308 0%, rgba(234, 115, 8, 0.00) 100%);
 
-
   --bg-appeal-glow: linear-gradient(129.83deg, #37ADF9 0%, #AE55F7 100%);;
 
   --color-appeal-bg: #82C3F5;
@@ -98,10 +97,11 @@ html {
 }
 
 body {
+  position: relative;
   background: var(--bg);
   color: var(--txt);
-  margin: 10rem 0 0;
-  padding: 0;
+  padding: 10rem 0 0;
+  margin: 0;
   min-height: 100vh;
   max-width: 100%;
   line-height: 1.6;
@@ -109,8 +109,9 @@ body {
 }
 
 .overlay {
-  position: fixed;
+  position: absolute;
   pointer-events: none;
+  overflow: hidden;
   width: 100%;
   height: 100%;
   top: 0;
