--- a/assets/less/whatsnew-128.less
+++ b/assets/less/whatsnew-128.less
@@ -264,7 +264,7 @@ p {
     margin: auto 0 auto auto;
     flex-shrink: 0;
 
-    img {
+    img, picture {
       max-height: 37.3125rem;
       width: 100%;
     }
@@ -310,7 +310,7 @@ p {
   width: 30.9375rem;
   height: 35.8125rem;
 
-  img {
+  img, picture {
     margin: auto;
     max-width: 28.9325rem;
     height: 30.0625rem;
@@ -321,7 +321,7 @@ p {
   width: 30.75rem;
   height: 35.625rem;
 
-  img {
+  img, picture {
     // Full-width :^)
     width: 100%;
     height: 100%;
@@ -332,7 +332,7 @@ p {
   width: 30.9375rem;
   height: 33.0625rem;
 
-  img {
+  img, picture {
     margin: auto;
     width: 30.296875rem;
     height: 29.13125rem;
@@ -410,6 +410,7 @@ p {
   .two-column {
     padding: 0 0.25rem;
     flex-direction: column-reverse;
+    gap: 4rem;
 
     &.flipped {
       flex-direction: column-reverse;
@@ -429,7 +430,7 @@ p {
     width: 100% !important;
     height: 100% !important;
 
-    img, svg {
+    img, svg, picture {
       max-width: 100% !important;
       width: 100% !important;
       height: 100% !important;
